--- a/.coveragerc
+++ b/.coveragerc
@@ -1,4 +1,5 @@
 [report]
+fail_under = 100
 exclude_lines =
     # Have to re-enable the standard pragma
     pragma: no cover
@@ -8,3 +9,4 @@ exclude_lines =
 
 [run]
 omit = *tests*
+branch = True
