--- a/tox.ini
+++ b/tox.ini
@@ -1,23 +1,21 @@
 [tox]
-envlist = py27, pypy, py34, py35, pep8
+minversion=1.8
+envlist = py3.6,py3.7,py3.8,py3.9,pep8
+skip_missing_interpreters=True
 
-[testenv:py27]
-deps = -r{toxinidir}/tests/requires.txt
-commands = nose2 {posargs}
-
-[testenv:pypy]
-deps = -r{toxinidir}/tests/requires.txt
-commands = nose2 {posargs}
-
-[testenv:py34]
-deps = -r{toxinidir}/tests/requires.txt
-commands = nose2 {posargs}
-
-[testenv:py35]
-deps = -r{toxinidir}/tests/requires.txt
-commands = nose2 {posargs}
-
-[testenv:pep8]
-deps = setuptools>=1.1.6
-       pep8
-commands = pep8 --exclude=.tox,dist,doc,*env*,.*env*,build
+[testenv]
+basepython =
+    py27: python2.7
+    pypy: pypy
+    py3.5: python3.5
+    py3.6: python3.6
+    py3.7: python3.7
+    py3.8: python3.8
+    py3.9: python3.9
+    pep8: python3.8
+deps =
+    py27,pypy,py3.5,py3.6,py3.7,py3.8,py3.9: -r{toxinidir}/tools/requires.txt
+    pep8: -r{toxinidir}/tools/pep8-requires.txt
+commands =
+    py27,pypy,py3.5,py3.6,py3.7,py3.8,py3.9: nose2 {posargs}
+    pep8: pycodestyle --exclude=.tox,dist,doc,docs,*env*,.*env*,build --ignore=E128
