--- a/.github/workflows/ci-gh-actions.yml
+++ b/.github/workflows/ci-gh-actions.yml
@@ -11,7 +11,7 @@ jobs:
     build: 
         runs-on: ubuntu-latest
         strategy:
-            fast-fail: true
+            fail-fast: true
             matrix:
                 python-version: [3.6, 3.7, 3.8, 3.9]
         steps:
