--- a/.github/workflows/ci-gh-actions.yml
+++ b/.github/workflows/ci-gh-actions.yml
@@ -1,14 +1,30 @@
 name: PyInstance CI
 
 on:
-    push:
-        branches: ['*master']
     pull_request:
-        branches: ['*master']
+       paths-ignore:
+         - '.github/*'
 
 jobs:
 
-    build: 
+    lint:
+        runs-on: ubuntu-latest
+        strategy:
+            fail-fast: true
+        steps:
+            - uses: actions/checkout@v2
+              with:
+               ref: ${{ github.event.pull_request.head.sha }}
+              if: ${{ github.event_name }} == 'pull_request'
+            - name: Setup Python ${{ matrix.python-version }}
+              uses: actions/setup-python@v2
+              with:
+                python-version: 3.8
+            - name: Install Dependencies
+              run: pip install tox setuptools virtualenv coveralls --upgrade
+            - name: Run Tox
+              run: tox -v -e pep8 -- -v
+    build:
         runs-on: ubuntu-latest
         strategy:
             fail-fast: true
@@ -25,7 +41,7 @@ jobs:
               uses: actions/setup-python@v2
               with:
                 python-version: ${{ matrix.python-version }}
-            - name: Install Dependencies 
+            - name: Install Dependencies
               run: pip install tox setuptools virtualenv coveralls --upgrade
             - name: Run Tox
               run: tox -v -e py${{ matrix.python-version }} -- -v
